# Python

./: .gitattributes  .gitignore  unstage_commit_chunks.sh  unstage_commit_chunks_kor.sh
Legacy/Step1/: baseball.py  lottery.html  lottery.py  study_base.py  study_datatype.py  study_dictionary.py  study_iostream.py  study_list.py  study_module.py  study_module_calc.py
Legacy/Step1/Data/: data.txt  new_data.txt
Legacy/Step2/: study_OOP1-1.py  study_OOP1-2.py  study_OOP1-3.py  study_OOP2-1.py  study_OOP2-2.py  study_OOP2-3.py  study_OOP2-4.py  study_OOP3-1.py  study_OOP3-2.py  study_OOP3-3.py  study_OOP3-4.py
Legacy/Step3/: study_Algorithm1.py  study_Algorithm2.py  study_DataStructure1.py  study_DataStructure2.py  study_DataStructure3.py
Legacy/Twillo/: main.py
Study/: GitSummary.txt  PythonSummary.txt
Study/1.JoCoding/: 1.자료형-숫자,문자.py  2.자료형-자료형.py
Study/2.ESS/: 1.2.4.fibonacci.py  2.5.prime.py
Study/20250902/: helloworld.py
Study/3.Web/: mainWebserver.py
Study/4.FastAPI/: BookIntroduction.txt  FastAPI.txt  YoutubeLeeSam.txt  docker.txt
Study/4.FastAPI/BookDevelop/: BookReadme.txt
Study/4.FastAPI/BookDevelop/planner/: bookReadme_2.txt  main.py  planner.db  requirements.txt  utils.py
Study/4.FastAPI/BookDevelop/planner/database/: connection.py
Study/4.FastAPI/BookDevelop/planner/models/: events.py  users.py
Study/4.FastAPI/BookDevelop/planner/routes/: events.py  users.py
Study/4.FastAPI/BookDevelop/todos/: api.py  bookReadme_1.txt  model.py  requirements.txt  todo.py
Study/4.FastAPI/BookDevelop/todos/templates/: home.html  todo.html
Study/4.FastAPI/BookIntroduction/: Dockerfile  docker-compose.yaml  pyproject.toml
Study/4.FastAPI/BookIntroduction/api/: __init__.py  main.py
Study/4.FastAPI/Example01/: main_quick.py
Study/4.FastAPI/LeeSam/: main_quick.py
Study/6.Docker/: docker.txt
Study/6.VibeCoding/: CursorAI.txt
Study/7.Container/: Tomcat.txt
Study/7.Module/: Docker.txt  Kubernetes.txt  MariaDB.txt  Python.txt  Radis.txt  SpringBoot.txt
Study/7.Module/DockerCompose/: docker-compose.yaml
Study/8.Helper/: GitCommand.txt  VSCodeUsage.txt
